@@ -18,17 +18,19 @@
 
 package org.apache.cassandra.sidecar.common;
 
-import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.datastax.driver.core.Cluster;
 import com.datastax.driver.core.Host;
+import com.datastax.driver.core.Row;
 import com.datastax.driver.core.Session;
 import com.datastax.driver.core.exceptions.NoHostAvailableException;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 
 /**
@@ -48,10 +50,10 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
     private final CQLSession cqlSession;
     private final JmxClient jmxClient;
     private final CassandraVersionProvider versionProvider;
-    private volatile Session session;
+    private final AtomicReference<Session> session = new AtomicReference<>(null);
     private SimpleCassandraVersion currentVersion;
     private ICassandraAdapter adapter;
-    private volatile boolean isUp = false;
+    private volatile NodeSettings nodeSettings = null;
 
     private static final Logger logger = LoggerFactory.getLogger(CassandraAdapterDelegate.class);
     private final AtomicBoolean registered = new AtomicBoolean(false);
@@ -88,17 +90,14 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
      */
     public void checkSession()
     {
-        if (session != null)
+        if (session.get() != null)
         {
             return;
         }
 
         synchronized (this)
         {
-            if (session == null)
-            {
-                session = cqlSession.getLocalCql();
-            }
+            session.compareAndSet(null, cqlSession.getLocalCql());
         }
     }
 
@@ -131,11 +130,11 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
     {
         checkSession();
 
-        Session activeSession = session;
+        Session activeSession = session.get();
         if (activeSession == null)
         {
             logger.info("No local CQL session is available. Cassandra is down presumably.");
-            isUp = false;
+            nodeSettings = null;
             return;
         }
 
@@ -143,37 +142,44 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
 
         try
         {
-            String version = activeSession.execute("select release_version from system.local")
-                                          .one()
-                                          .getString("release_version");
-            isUp = true;
+            Row oneResult = activeSession.execute("select release_version, partitioner from system.local")
+                                         .one();
+
+            String releaseVersion = oneResult.getString("release_version");
+            // update the nodeSettings cache.
+            // Note that within the scope of this method, we should keep on using the local releaseVersion
+            nodeSettings = new NodeSettings(releaseVersion, oneResult.getString("partitioner"));
             // this might swap the adapter out
-            SimpleCassandraVersion newVersion = SimpleCassandraVersion.create(version);
+            SimpleCassandraVersion newVersion = SimpleCassandraVersion.create(releaseVersion);
             if (!newVersion.equals(currentVersion))
             {
                 currentVersion = newVersion;
-                adapter = versionProvider.getCassandra(version).create(cqlSession, jmxClient);
+                adapter = versionProvider.getCassandra(nodeSettings.releaseVersion()).create(cqlSession, jmxClient);
                 logger.info("Cassandra version change detected. New adapter loaded: {}", adapter);
             }
-            logger.debug("Cassandra version {}", version);
+            logger.debug("Cassandra version {}", releaseVersion);
         }
         catch (NoHostAvailableException e)
         {
             logger.error("Unexpected error connecting to Cassandra instance.", e);
             // The cassandra node is down.
             // Unregister the host listener and nullify the session in order to get a new object.
-            isUp = false;
+            nodeSettings = null;
             maybeUnregisterHostListener(activeSession);
-            session = null;
+            activeSession.closeAsync();
+            session.compareAndSet(activeSession, null);
         }
     }
 
-
+    /**
+     * @return a cached {@link NodeSettings}. The returned value could be null when no CQL connection is established
+     */
+    @Nullable
     @Override
-    public List<NodeStatus> getStatus()
+    public NodeSettings getSettings()
     {
         checkSession();
-        return adapter.getStatus();
+        return nodeSettings;
     }
 
     @Override
@@ -192,13 +198,12 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
     public void onUp(Host host)
     {
         healthCheck();
-        isUp = true;
     }
 
     @Override
     public void onDown(Host host)
     {
-        isUp = false;
+        nodeSettings = null;
     }
 
     @Override
@@ -219,7 +224,7 @@ public class CassandraAdapterDelegate implements ICassandraAdapter, Host.StateLi
 
     public boolean isUp()
     {
-        return isUp;
+        return nodeSettings != null;
     }
 
     public SimpleCassandraVersion getVersion()
